--- a/webroot/css/custom/back/styles.css
+++ b/webroot/css/custom/back/styles.css
@@ -2016,12 +2016,21 @@ div.container_builder div.content_email {
   overflow-x: hidden;
   width: 70%;
   min-width: 500px;
-  height: 100%;
   position: relative;
-  overflow-y: auto;
 }
 div.container_builder div.content_email.croppieActive {
   overflow-y: hidden;
+}
+div.container_builder div.content_email div#storage_email {
+  padding: 10px 0px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 auto;
+  overflow-x: hidden;
+  min-height: 100%;
+  height: 100%;
 }
 div.container_builder div.sidebar_tools {
   width: 30%;
@@ -2340,6 +2349,9 @@ div.header .icon-action.clic:active {
   transform: translate(0px, 5px);
   border-bottom-width: 1px;
 }
+div.header .icon-action.active {
+  color: #1565C0;
+}
 div.header .icon-action.saving {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
   opacity: 0.3;
@@ -2421,16 +2433,6 @@ div.header .minicolors:hover .minicolors-panel {
 }
 
 /*----------  Container email  ----------*/
-div#storage_email {
-  padding: 10px 0px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  margin: auto;
-  overflow-x: hidden;
-  min-height: 100%;
-}
 div#storage_email .sortable-placeholder {
   border: 1px dotted #444;
   border-right: 0;
@@ -2439,6 +2441,16 @@ div#storage_email .sortable-placeholder {
 }
 div#storage_email table[data-content] {
   position: relative;
+}
+div#storage_email table[data-section], div#storage_email table[data-section] * {
+  -moz-transition: width 0.5s ease 0s;
+  -o-transition: width 0.5s ease 0s;
+  -webkit-transition: width 0.5s ease;
+  -webkit-transition-delay: 0s;
+  transition: width 0.5s ease 0s;
+}
+div#storage_email table[data-mobile] {
+  width: 500px !important;
 }
 div#storage_email table, div#storage_email td {
   outline: none;
