fix scroll without drag/drop

--- a/webroot/css/custom/back/styles.css
+++ b/webroot/css/custom/back/styles.css
@@ -2015,6 +2015,7 @@ div.container_builder {
 div.container_builder div.content_email {
   overflow-x: hidden;
   width: 70%;
+  height: 100%;
   min-width: 500px;
   position: relative;
 }
@@ -2023,12 +2024,8 @@ div.container_builder div.content_email.croppieActive {
 }
 div.container_builder div.content_email div#storage_email {
   padding: 10px 0px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   width: 100%;
   margin: 0 auto;
-  overflow-x: hidden;
   min-height: 100%;
   height: 100%;
 }
