--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -1389,16 +1389,15 @@ div.container_builder {
     div.content_email {
         overflow-x: hidden;
         width: 70%;
+        height: 100%;
         min-width: 500px;
         position: relative;
         &.croppieActive { overflow-y: hidden; }
 
         div#storage_email {
             padding: 10px 0px;
-            @include box-sizing(border-box);
             width: 100%;
             margin: 0 auto;
-            overflow-x: hidden;
             min-height: 100%;
             height: 100%;
         }
