--- a/webroot/css/custom/back/styles.css
+++ b/webroot/css/custom/back/styles.css
@@ -2913,6 +2913,48 @@ div.sidebar_tools > div.menu > div.task.menuactive {
   font-style: italic;
   font-size: 12px;
 }
+.menu .items_builder_block > div.field_tools_item_block > div.item > span.ui-spinner {
+  position: relative;
+  width: 100%;
+}
+.menu .items_builder_block > div.field_tools_item_block > div.item > span.ui-spinner > a.ui-spinner-button {
+  position: absolute;
+  height: 100%;
+  width: 28px;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+}
+.menu .items_builder_block > div.field_tools_item_block > div.item > span.ui-spinner > a.ui-spinner-button.ui-spinner-down {
+  right: 28px;
+}
+
+.ui-button-icon.ui-icon {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  text-indent: 0;
+}
+.ui-button-icon.ui-icon i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-size: 14px;
+  color: #444;
+}
+.ui-button-icon.ui-icon:active i {
+  margin-top: 3px;
+}
 
 div.field_tools_item_block .btn_tools,
 div.field_tools_item_block select.input,
@@ -2957,6 +2999,13 @@ div.field_tools_item_block p.active::after {
   opacity: 0;
   visibility: hidden;
 }
+div.field_tools_item_block .btn_tools.ui-spinner-input,
+div.field_tools_item_block select.input.ui-spinner-input,
+div.field_tools_item_block input.input.ui-spinner-input,
+div.field_tools_item_block p.ui-spinner-input {
+  margin: 0;
+  vertical-align: baseline;
+}
 
 .items_builder_block > div.background-color div.minicolors::after, .items_builder_block > div.color div.minicolors::after {
   content: 'Selectionner une couleur';
@@ -2984,42 +3033,6 @@ div.field_tools_item_block p.active::after {
 }
 .items_builder_block > div.background-color span.minicolors-swatch, .items_builder_block > div.color span.minicolors-swatch {
   top: 4px !important;
-}
-.items_builder_block > div.font-size span.change_value_action, .items_builder_block div.height span.change_value_action, .items_builder_block div.line-height span.change_value_action {
-  position: absolute;
-  content: '';
-  width: 29px;
-  height: 29px;
-  text-align: center;
-  right: 0;
-  bottom: 0;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.items_builder_block > div.font-size span.change_value_action i, .items_builder_block div.height span.change_value_action i, .items_builder_block div.line-height span.change_value_action i {
-  position: absolute;
-  top: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 14px;
-  color: #444;
-}
-.items_builder_block > div.font-size span.change_value_action:active i, .items_builder_block div.height span.change_value_action:active i, .items_builder_block div.line-height span.change_value_action:active i {
-  margin-top: 3px;
-}
-.items_builder_block > div.font-size span.change_value_action#plus, .items_builder_block div.height span.change_value_action#plus, .items_builder_block div.line-height span.change_value_action#plus {
-  right: 0px;
-}
-.items_builder_block > div.font-size span.change_value_action#moins, .items_builder_block div.height span.change_value_action#moins, .items_builder_block div.line-height span.change_value_action#moins {
-  right: 29px;
-  border-left: 1px solid rgba(0, 0, 0, 0.3);
-  border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 .items_builder_block > div.text-align div.item p {
   width: auto;
@@ -3159,9 +3172,12 @@ div.field_tools_item_block p.active::after {
 .items_builder_block > div.padding div.map_block div.row > div.block, .items_builder_block > div.border div.map_block div.row > div.block {
   background-color: #fff;
   margin: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
   width: calc((100% / 3) - 23px);
-  height: calc(100% - 22px);
+  height: calc(100% - 23px);
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: row nowrap;
@@ -3171,12 +3187,40 @@ div.field_tools_item_block p.active::after {
   -webkit-align-items: center;
   align-items: center;
 }
+.items_builder_block > div.padding div.map_block div.row > div.block span.ui-spinner, .items_builder_block > div.border div.map_block div.row > div.block span.ui-spinner {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+.items_builder_block > div.padding div.map_block div.row > div.block span.ui-spinner input, .items_builder_block > div.border div.map_block div.row > div.block span.ui-spinner input {
+  width: 20px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  font-size: 12px;
+  font-weight: bold;
+  font-family: 'Roboto';
+  padding: 0;
+  margin: 0;
+  border: 0;
+  color: #444;
+  outline: none;
+  left: calc(50% - 10px);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.items_builder_block > div.padding div.map_block div.row > div.block span.ui-spinner a, .items_builder_block > div.border div.map_block div.row > div.block span.ui-spinner a {
+  width: 20px;
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+}
+.items_builder_block > div.padding div.map_block div.row > div.block span.ui-spinner a:last-child, .items_builder_block > div.border div.map_block div.row > div.block span.ui-spinner a:last-child {
+  background-color: transparent;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+}
 .items_builder_block > div.padding div.map_block div.row > div.block.none, .items_builder_block > div.border div.map_block div.row > div.block.none {
   visibility: hidden;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block:hover, .items_builder_block > div.border div.map_block div.row > div.block:hover {
-  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
-  opacity: 1;
 }
 .items_builder_block > div.padding div.map_block div.row > div.block.center, .items_builder_block > div.border div.map_block div.row > div.block.center {
   background: repeating-linear-gradient(45deg, #fafafa, #f0f0f0 10px, #fafafa 10px, #f0f0f0 10px);
@@ -3237,30 +3281,6 @@ div.field_tools_item_block p.active::after {
   -webkit-transform: perspective(0) rotateX(180deg);
   transform: perspective(0) rotateX(180deg);
 }
-.items_builder_block > div.padding div.map_block div.row > div.block div.number, .items_builder_block > div.border div.map_block div.row > div.block div.number {
-  width: 70%;
-  height: 100%;
-  position: relative;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.number > input, .items_builder_block > div.border div.map_block div.row > div.block div.number > input {
-  width: 100%;
-  position: absolute;
-  border: 0;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  top: 48%;
-  left: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-  background-color: transparent;
-  font-family: 'Roboto';
-  max-width: 30px;
-  font-size: 15px;
-}
 .items_builder_block > div.padding div.map_block div.row > div.block div.minicolors, .items_builder_block > div.border div.map_block div.row > div.block div.minicolors {
   height: 100%;
   width: 100%;
@@ -3292,50 +3312,6 @@ div.field_tools_item_block p.active::after {
 }
 .items_builder_block > div.padding div.map_block div.row > div.block div.minicolors div.minicolors-panel, .items_builder_block > div.border div.map_block div.row > div.block div.minicolors div.minicolors-panel {
   top: 100%;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.action_number, .items_builder_block > div.border div.map_block div.row > div.block div.action_number {
-  width: 30%;
-  height: 100%;
-  position: relative;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  border-left: 1px solid rgba(0, 0, 0, 0.5);
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.action_number span, .items_builder_block > div.border div.map_block div.row > div.block div.action_number span {
-  height: 49.5%;
-  width: 100%;
-  text-align: center;
-  background-color: #fff;
-  color: #444;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.action_number span:active i, .items_builder_block > div.border div.map_block div.row > div.block div.action_number span:active i {
-  margin-top: 3px;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.action_number span i, .items_builder_block > div.border div.map_block div.row > div.block div.action_number span i {
-  font-size: 14px;
-  display: inline-block;
-  vertical-align: middle;
-}
-.items_builder_block > div.padding div.map_block div.row > div.block div.action_number hr, .items_builder_block > div.border div.map_block div.row > div.block div.action_number hr {
-  width: 100%;
-  height: 1px;
-  display: block;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .menu .sections_builder_block > div.thumbnail {
