--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -1967,8 +1967,44 @@ div.sidebar_tools > div.menu { background-color: #fff; min-height: 100%;
                     font-size: 12px;
                 }
             }
+
+            & > span.ui-spinner {
+                position: relative;
+                width: 100%;
+
+                & > a.ui-spinner-button {
+                    position: absolute;
+                    height: 100%;
+                    width: 28px;
+                    top: 0; bottom: 0; right: 0;
+                    border-left: 1px solid rgba(0,0,0,0.3);
+
+                    &.ui-spinner-down {
+                        right: 28px;
+                    }
+                }
+            }
         }
     }
+}
+
+.ui-button-icon.ui-icon {
+    width: 100%;
+    height: 100%;
+    margin:0;
+    position: absolute;
+    left: 0; top: 0; right: 0; bottom: 0;
+    text-indent: 0;
+
+    i {
+        position: absolute;
+        top: 50%; left: 50%;
+        @include translate(-50%, -50%);
+        font-size: 14px;
+        color: #444;
+    }
+
+    &:active { i { margin-top: 3px; } }
 }
 
 // Style par default des boutons items
@@ -1987,15 +2023,18 @@ div.field_tools_item_block p {
     position: relative;
     font-family: 'Roboto';
     color: #444;
-    // @include opacity(0.9);
     outline: none;
 
     &:hover { @include opacity(1); border-color: rgba(0,0,0,0.5); }
 
     &.active { 
         border-color: $primary-color; 
-        // @include opacity(1);
         &::after { @include opacity(0); visibility: hidden; }
+    }
+
+    &.ui-spinner-input {
+        margin: 0;
+        vertical-align: baseline;
     }
 
 }
@@ -2026,25 +2065,6 @@ div.field_tools_item_block p {
         }
 
         span.minicolors-swatch { top: 4px!important; }
-    }
-
-    // Boutons + et -
-    & > div.font-size, div.height, div.line-height {
-        span.change_value_action {
-            position: absolute;
-            content: '';
-            width: 29px;
-            height: 29px;
-            text-align: center;
-            right: 0; bottom: 0;
-            cursor: pointer;
-            -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
-                                        
-            i { position: absolute; top: 50%; @include translate(-50%, -50%); font-size: 14px; color: #444;}
-            &:active { i { margin-top: 3px; } }
-            &#plus {right: 0px;}
-            &#moins {right: 29px; border-left: 1px solid rgba(0,0,0,0.3); border-right:1px solid rgba(0,0,0,0.3); }
-        }
     }
 
     // Alignement
@@ -2126,13 +2146,45 @@ div.field_tools_item_block p {
                 & > div.block {
                     background-color: #fff;
                     margin: 10px;
-                    border: 1px solid rgba(0,0,0,0.5);
+                    border: 1px solid rgba(0,0,0,0.3);
+                    @include border-radius(3px);
                     width: calc((100% / 3) - 23px);
-                    height: calc(100% - 22px);
+                    height: calc(100% - 23px);
                     @include flex(row nowrap, center, center);
 
+                    span.ui-spinner {
+                        width: 100%;
+                        height: 100%;
+                        margin:0;
+
+                        input {
+                            width: 20px;
+                            text-align: center;
+                            position: absolute;
+                            top: 50%;
+                            font-size: 12px;
+                            font-weight: bold;
+                            font-family: 'Roboto';
+                            padding: 0;
+                            margin: 0;
+                            border: 0;
+                            color: #444;
+                            outline: none;
+                            left: calc(50% - 10px);
+                            @include translate(-50%, -50%);
+                        }
+
+                        a {
+                            width: 20px;
+                            border-left: 1px solid rgba(0,0,0,0.3);
+                            &:last-child {
+                                background-color: transparent;
+                                border-top: 1px solid rgba(0,0,0,0.3);
+                            }
+                        }
+                    }
+
                     &.none { visibility: hidden; }
-                    &:hover { @include opacity(1); }
                     &.center { background: repeating-linear-gradient( 45deg,  #fafafa, #f0f0f0 10px, #fafafa 10px, #f0f0f0 10px ); }
                     &.center > p { margin: auto; text-align: center; border: none; font-size: 13px; font-weight: bold; height: auto; }
                     
@@ -2146,7 +2198,6 @@ div.field_tools_item_block p {
                         @include transform-style(preserve-3d);
             
                         & > div.front, & > div.back {
-                            // background-color: #fff;
                             @include single-transition(transform, 0.3s, ease, 0s);
                             @include backface-visibility(hidden);
                             @include flex(row nowrap, center, center);
@@ -2158,24 +2209,6 @@ div.field_tools_item_block p {
 
                         & > div.front { z-index: 0;}
                         & > div.back {  @include rotateX(180deg, 0);}
-                    }
-                    div.number {
-                        width: 70%;
-                        height: 100%;
-                        position: relative;
-
-                         & > input {
-                            width: 100%;
-                            position: absolute;
-                            border:0; outline: 0; padding: 0; margin:0;
-                            top: 48%; left: 50%;
-                            @include translate(-50%, -50%);
-                            text-align: center;
-                            background-color: transparent;
-                            font-family: 'Roboto';
-                            max-width: 30px;
-                            font-size: 15px;
-                        }
                     }
 
                     div.minicolors {
@@ -2201,35 +2234,6 @@ div.field_tools_item_block p {
                             border-left: 1px solid rgba(0, 0, 0, 0.5);
                         }
                         div.minicolors-panel { top: 100%; }
-                    }
-
-                    div.action_number {
-                        width: 30%;
-                        height: 100%;
-                        position: relative;
-                        @include flex(column nowrap, flex-start, flex-start);
-                        border-left: 1px solid rgba(0,0,0,0.5);
-
-                        span {
-                            height: 49.5%;
-                            width: 100%;
-                            text-align: center;
-                            background-color: #fff;
-                            color: #444;
-                            cursor: pointer;
-                            -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
-
-                            &:active { i { margin-top: 3px; } }
-                            i { font-size: 14px; display: inline-block; vertical-align: middle; }
-                        }
-
-                        hr {
-                            width: 100%;
-                            height: 1px;
-                            display: block;
-                            margin: 0; padding:0; border:0;
-                            background-color: rgba(0,0,0,0.5);
-                        }
                     }
                 }
             }
