--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -2,7 +2,8 @@
 =            Feuille de style du site sans l'admin            =
 =============================================================*/
 /*----------  Import   ----------*/
-/*----------  Fonts  ----------*/
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab");
 /* fallback */
 @font-face {
   font-family: 'Material Icons';
@@ -10,6 +11,22 @@
   font-weight: 400;
   src: local("Material Icons"), local("MaterialIcons-Regular"), url(fonts/Material_icon.woff2) format("woff2");
 }
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
+
 @font-face {
   font-family: 'bariolbold_italic';
   src: url("fonts/bariol_bold_italic-webfont.eot");
@@ -98,73 +115,15 @@
   width: 100%;
 }
 
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
-
-/*----------  Bases  ----------*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
-html {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-q, blockquote {
-  quotes: none;
-}
-
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-a img {
-  border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
-  display: block;
-}
-
-html, body {
+html,
+body {
   font-family: 'bariolregular', 'Helvetica';
+  padding: 0;
+  margin: 0;
 }
 
 h1 {
+  margin: 0;
   font-size: 32px;
   color: #0676B2;
   display: inline-block;
